# puzzle-solver

./: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json  serve.json  wasm_worker.js  webpack.config.js
js/: index.js
src/: defs.rs  helpers.rs  lib.rs  main.rs
static/: index.html
