[package]
name = "puzzle_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ndarray = "0.15.6"
wasm-bindgen ="0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true}
serde = { version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.4"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"

[profile.release]
debug = 1
# Enable if build size becomes an issue
# opt-level = "s" 