[package]
name = "puzzle_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]
parallel = ["rayon", "wasm-bindgen-rayon"]

[dependencies]
ndarray = "0.15.6"
wasm-bindgen ="0.2.74"
console_error_panic_hook = { version = "0.1.7", optional = true}
serde = { version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.4"
rayon = { version = "1.5", optional = true }
wasm-bindgen-rayon = { version = "1.0", optional = true}
